# hum

./: .gitignore  CHANGELOG.md  Cargo.toml  DISCLAIMER  NOTICE  README.md  build.rs  chord_demo.hum  complex.hum  daisy.hum  readme_demo.hum  sample_with_error.hum  scale_demo.hum  scale_test.hum  simple_sample.hum  syntax.hum
EXTERNAL_DEPENDENCY_LICENSES/CLAP_2_32_0/: README
EXTERNAL_DEPENDENCY_LICENSES/CLAP_2_33_0/: README
EXTERNAL_DEPENDENCY_LICENSES/CLAP_4_4_3/: README
EXTERNAL_DEPENDENCY_LICENSES/CLAP_4_5_53/: README
EXTERNAL_DEPENDENCY_LICENSES/CROSSTERM_0_29_0/: README
EXTERNAL_DEPENDENCY_LICENSES/HOUND_3_4_0/: README
EXTERNAL_DEPENDENCY_LICENSES/HOUND_3_5_1/: README
EXTERNAL_DEPENDENCY_LICENSES/RATATUI_0_30_0/: README
EXTERNAL_DEPENDENCY_LICENSES/ROPEY_1_6_1/: README
EXTERNAL_DEPENDENCY_LICENSES/RUST_PEG_0_5/: README
EXTERNAL_DEPENDENCY_LICENSES/RUST_PEG_0_6/: README
EXTERNAL_DEPENDENCY_LICENSES/RUST_PEG_0_8_5/: README
EXTERNAL_DEPENDENCY_LICENSES/RUST_PORTAUDIO_0_7_0/: README
EXTERNAL_DEPENDENCY_LICENSES/VCPKG_RS_0_2_11/: README
src/: bin.rs  hum_error.rs  hum_io.rs  hum_parse.rs  hum_parse.rustpeg  lib.rs  main.rs
src/hum_editor/: input.rs  mod.rs  view.rs
src/hum_editor/editor_state/: editing.rs  formatting.rs  mod.rs  movement.rs  playback.rs  utils.rs
src/hum_io/: mod.rs  parse.rs
src/hum_parse/: mod.rs
src/hum_process/: hum_math.rs  hum_voice.rs  mod.rs
tests/: duration_tests.rs  formatting_tests.rs
