[package]
name = "hum"
version = "0.7.0-dev"
authors = ["Connor Bulakites <connor@bulakites.net>"]
edition = "2024"
include = [
    "**/*.rs",
    "**/*.rustpeg",
    "Cargo.toml",
    "LICENSE",
    "DISCLAIMER",
    "README.md",
    "EXTERNAL_DEPENDENCY_LICENSES/*",
]
build = "build.rs"
description = "A music notation language and synthesizer written in Rust."
repository = "https://github.com/crbulakites/hum"
readme = "README.md"
keywords = ["music", "notation", "synthesizer", "sine", "wave"]
categories = ["multimedia", "multimedia::audio"]
license = "GPL-3.0-or-later"

[lib]
name = "hum"
path = "src/lib.rs"

[[bin]]
name = "hum"
path = "src/bin.rs"

[badges]
maintenance = { status = "experimental" }

[dependencies]
clap = "4.5.53"
hound = "3.5.1"
peg = "0.8.5"
ratatui = "0.30.0"
crossterm = "0.29.0"
ropey = "1.6.1"

[build-dependencies]
